gitops/apps/analytics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: 790190221081.dkr.ecr.us-east-1.amazonaws.com/togglemaster-analytics:v1.0.0-c3c16702a431adc9c1fe9f0f9e333853a090bdf2
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8005
            failureThreshold: 30
            periodSeconds: 10
